fix: GROW-568 Alignment issue

--- a/src/component/MyAccountOverlayV1/MyAccountOverlay.style.scss
+++ b/src/component/MyAccountOverlayV1/MyAccountOverlay.style.scss
@@ -1289,6 +1289,7 @@
         border-right: none;
         border-bottom: none;
         border-left: none;
+        text-align: left;
 
         .CountryMiniFlag {
           &-Container {
@@ -1428,6 +1429,7 @@
         border-right: none;
         border-bottom: none;
         border-left: none;
+        text-align: left;
 
         .CountryMiniFlag {
           &-Container {
